Fixed dark mode

--- a/src/styles/_color-mode.scss
+++ b/src/styles/_color-mode.scss
@@ -1,4 +1,4 @@
-[data-color-mode="light"]{
+.light{
 	background-color: #fff;
 	color: #00140E;
 
